# CrawlPilot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
crawl_pilot/: __init__.py  antibot.py  cli.py  fetcher.py  parser.py  pipeline.py  scheduler.py  storage.py  utils.py
tests/: test_fetcher.py  test_parser.py  test_pipeline.py  test_utils.py
