[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crawl-pilot"
version = "0.1.0"
description = "CrawlPilot - 智能自适应Web爬虫引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CrawlPilot Team", email = "crawl-pilot@example.com"},
]
keywords = ["web-scraping", "crawler", "spider", "anti-bot", "adaptive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]
lxml = ["lxml>=4.9.0"]
beautifulsoup4 = ["beautifulsoup4>=4.12.0"]
full = [
    "httpx>=0.24.0",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
crawl-pilot = "crawl_pilot.cli:main"

[tool.setuptools]
packages = ["crawl_pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
